--- a/projetoagoravai.html
+++ b/projetoagoravai.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="projetoagoravai.css">
     <link rel="shortcut icon" href="imgs projeot/favicon.ico" type="image/x-icon">
-    <title>site do meu amor nao entrar</title>
+    <title>site do meu amor podeentrar</title>
 </head>
 <body>
 
@@ -40,7 +40,7 @@
     <main>
 
     <div class="texto">
-     <img style=" margin-left:-300px; margin:auto; width: 700px; float: right; height: 800px;" src="imgs projeot/WhatsApp Image 2022-05-18 at 15.44.26.jpeg" alt="">
+   
 
      
 
