--- a/projetoagoravai.html
+++ b/projetoagoravai.html
@@ -24,7 +24,9 @@
             </div>
         
             <div class="menus" > <h3>Cartas</h3>
-               <p>skirous  </p>
+               <p><a href="imgs projeot/Novo(a) Documento do Microsoft Word.pdf" target="_blank">skirous</a>  </p>
+
+                
  
 
  
