--- a/Projetoreal.html
+++ b/Projetoreal.html
@@ -44,7 +44,7 @@
                     <div class="col-ul"><p>Roles</p>
                         <ul>
                                 <li><a href="https://photos.app.goo.gl/BKTU558qimeJwnuE8" target="_blank">teatro municpal </a> </li>
-                                <li><a href="https://photos.app.goo.gl/hsCqrmYm4VXs2tsCA" target="_blank">Van Gogh</a></li>
+                                <li><a href="projetoreal-van-gogh.html" target="_blank">Van Gogh</a></li>
                                 <li><a href="https://photos.app.goo.gl/okENu4C1UeZyPD436" target="_blank">SBC</a></li>
                                 <li><a href="https://photos.app.goo.gl/59aPsvecVmd63YKi8" target="_blank"> Guaiuba</a></li>
                         </ul>
@@ -85,4 +85,6 @@
 
             </div>
     </div>
+    
 </Body>
+
