--- a/projetoreal-van-gogh.html
+++ b/projetoreal-van-gogh.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="projetoreal-van-gogh.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="imgs projeot/download.ico" type="image/x-icon">
+    <title>Van Gogh</title>
 </head>
 <body>
     <div class="stars"></div>
     <div class="twinkling"></div> 
-   <div class="clouds"></div>
+
 
     <main>
         
