--- a/agoravai/sitedomeuamor.html
+++ b/agoravai/sitedomeuamor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="col-titulo"> <p>aaaa aa aaa aaaa</p>
+        <div id="col-titulo"><p>aaaa aa aaa aaaa</p>
         </div>
         <div id="emp-spc">
             
@@ -27,7 +27,7 @@
             <ul>
                 <li class="sub-carta"><p>skirous</p>
                     <ul>
-                        <li>100 dias</li>
+                        <a>100 dia</a>
                         <li>200 dias</li>
                     </ul>
                     </li>
